# chair

./: CMakeLists.txt  SerialTest  a.out  chair  main.c  main.cpp  serial.cpp  test
include/: el.cpp  el.h
include/serial/: v8stdint.h.gch
servoTest/: serial.cpp  servoTest.ino
servos/: serial.cpp
servos/servoTest/: servoTest.ino
